--- a/archive.html
+++ b/archive.html
@@ -21,28 +21,10 @@
 
 <ul id="archive-list">
 	
-		    <h2 class="month">November 2013</h2>	
+		    <h2 class="month">December 2014</h2>	
 	<li> 
-		<a href='/posts/getting-started.html'><aside class="dates">Nov 25</aside></a>
-		<a href='/posts/getting-started.html'>Getting started</a>
-	</li>
-	
-		    	
-	<li> 
-		<a href='/posts/getting-started-2.html'><aside class="dates">Nov 25</aside></a>
-		<a href='/posts/getting-started-2.html'>Getting started 2</a>
-	</li>
-	
-		    <h2 class="month">October 2013</h2>	
-	<li> 
-		<a href='/posts/an-example-post.html'><aside class="dates">Oct 11</aside></a>
-		<a href='/posts/an-example-post.html'>An example post</a>
-	</li>
-	
-		    <h2 class="month">September 2013</h2>	
-	<li> 
-		<a href='/posts/another-example.html'><aside class="dates">Sep 15</aside></a>
-		<a href='/posts/another-example.html'>Another example</a>
+		<a href='/posts/2014-12-05-hello-world.html'><aside class="dates">Dec 5</aside></a>
+		<a href='/posts/2014-12-05-hello-world.html'>Hello world</a>
 	</li>
 	
 </ul> <!--post-list-->
