--- a/index.html
+++ b/index.html
@@ -23,32 +23,13 @@
 		<ul id="post-list">
 			
 				<li> 
-					<a href='/posts/getting-started.html'><aside class="dates">Nov 25</aside></a>
-					<a href='/posts/getting-started.html'>Getting started <h2>An introduction.</h2></a>
-				</li>
-			
-				<li> 
-					<a href='/posts/getting-started-2.html'><aside class="dates">Nov 25</aside></a>
-					<a href='/posts/getting-started-2.html'>Getting started 2 <h2>An introduction.</h2></a>
-				</li>
-			
-				<li> 
-					<a href='/posts/an-example-post.html'><aside class="dates">Oct 11</aside></a>
-					<a href='/posts/an-example-post.html'>An example post <h2>Filled with sample content.</h2></a>
-				</li>
-			
-				<li> 
-					<a href='/posts/another-example.html'><aside class="dates">Sep 15</aside></a>
-					<a href='/posts/another-example.html'>Another example <h2>Set up with Markdown.</h2></a>
+					<a href='/posts/2014-12-05-hello-world.html'><aside class="dates">Dec 5</aside></a>
+					<a href='/posts/2014-12-05-hello-world.html'>Hello world <h2>Please welcome me into this brave new territory that is the blogosphere.</h2></a>
 				</li>
 			
 		</ul>
 
 		<!-- Uncomment for link to archive.
-		
-			<footer id="post-list-footer">
-				<a id="archive-link" href="archive.html"> <span class="arrow">&larr;</span> Archive</a>
-			</footer>
 		
 		-->
 
