--- a/archive.html
+++ b/archive.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Blog</title>
+	<title>LM2S</title>
 	<link rel="shortcut icon" href="/static/images/favicon.ico">	
 	<link rel="stylesheet" href="/static/css/style.css">
 	<link rel="alternate" type="application/rss+xml" title="My Blog Feed" href="/rss.xml">
@@ -16,15 +16,15 @@
 <section id="wrapper">
 
 <header id="header">
-<a id="title" class="index" href="/">Blog</a>
+<a id="title" class="index" href="/">LM2S</a>
 </header> <!--header-->
 
 <ul id="archive-list">
 	
-		    <h2 class="month">December 2014</h2>	
+		    <h2 class="month">March 2015</h2>	
 	<li> 
-		<a href='/posts/2014-12-05-hello-world.html'><aside class="dates">Dec 5</aside></a>
-		<a href='/posts/2014-12-05-hello-world.html'>Hello world</a>
+		<a href='/posts/save-to-mendeley-extension.html'><aside class="dates">Mar 6</aside></a>
+		<a href='/posts/save-to-mendeley-extension.html'>Save to Mendeley</a>
 	</li>
 	
 </ul> <!--post-list-->
@@ -32,7 +32,7 @@
 
 
 			<footer id="footer">
-				<p class="small">A short description</p>
+				<p class="small"></p>
 			</footer>
 		
 
