--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Blog</title>
+	<title>LM2S</title>
 	<link rel="shortcut icon" href="/static/images/favicon.ico">	
 	<link rel="stylesheet" href="/static/css/style.css">
 	<link rel="alternate" type="application/rss+xml" title="My Blog Feed" href="/rss.xml">
@@ -17,25 +17,25 @@
 
 	<section id="wrapper">
 		<header id="header">
-			<a id="title" class="index">Blog</a>
+			<a id="title" class="index">LM2S Blog</a>
 		</header> 
 
 		<ul id="post-list">
 			
 				<li> 
-					<a href='/posts/2014-12-05-hello-world.html'><aside class="dates">Dec 5</aside></a>
-					<a href='/posts/2014-12-05-hello-world.html'>Hello world <h2>Please welcome me into this brave new territory that is the blogosphere.</h2></a>
+					<a href='/posts/save-to-mendeley-extension.html'><aside class="dates">Mar 6</aside></a>
+					<a href='/posts/save-to-mendeley-extension.html'>Save to Mendeley <h2>A Safari extension.</h2></a>
 				</li>
 			
 		</ul>
 
-		<!-- Uncomment for link to archive.
 		
-		-->
+		
+		
 
 		
 			<footer id="footer">
-				<p class="small">A short description</p>
+				<p class="small"></p>
 			</footer>
 		
 	</section>
