--- a/error.html
+++ b/error.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Blog</title>
+	<title>LM2S</title>
 	<link rel="shortcut icon" href="/static/images/favicon.ico">	
 	<link rel="stylesheet" href="/static/css/style.css">
 	<link rel="alternate" type="application/rss+xml" title="My Blog Feed" href="/rss.xml">
