blog format edit, post corrections

--- a/archive.html
+++ b/archive.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>LM2S</title>
+	<title>Luís's</title>
 	<link rel="shortcut icon" href="/static/images/favicon.ico">	
 	<link rel="stylesheet" href="/static/css/style.css">
 	<link rel="alternate" type="application/rss+xml" title="My Blog Feed" href="/rss.xml">
@@ -16,7 +16,7 @@
 <section id="wrapper">
 
 <header id="header">
-<a id="title" class="index" href="/">LM2S</a>
+<a id="title" class="index" href="/">Luís's</a>
 </header> <!--header-->
 
 <ul id="archive-list">
