--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>LM2S</title>
+	<title>Luís's</title>
 	<link rel="shortcut icon" href="/static/images/favicon.ico">	
 	<link rel="stylesheet" href="/static/css/style.css">
 	<link rel="alternate" type="application/rss+xml" title="My Blog Feed" href="/rss.xml">
@@ -13,11 +13,9 @@
 <body>
 	
 
-	<a id="docs" href="http://cactusformac.com/redirect/#documentation">Documentation</a>
-
 	<section id="wrapper">
 		<header id="header">
-			<a id="title" class="index">LM2S Blog</a>
+			<a id="title" class="index">Luís's</a>
 		</header> 
 
 		<ul id="post-list">
