--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 	<section id="wrapper">
 		<header id="header">
 			<a id="title" class="index">Luís's</a>
+			<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			  ga('create', 'UA-49010543-2', 'auto');
+			  ga('send', 'pageview');
+			</script>
 		</header> 
 
 		<ul id="post-list">
