Import Safari bookmarks into Instapaper

--- a/archive.html
+++ b/archive.html
@@ -30,6 +30,12 @@
 
 <ul id="archive-list">
 	
+		    <h2 class="month">August 2015</h2>	
+	<li> 
+		<a href='/posts/safari-bookmarks-import-into-instapaper.html'><aside class="dates">Aug 14</aside></a>
+		<a href='/posts/safari-bookmarks-import-into-instapaper.html'>Import Safari bookmarks into Instapaper</a>
+	</li>
+	
 		    <h2 class="month">March 2015</h2>	
 	<li> 
 		<a href='/posts/save-to-mendeley-extension.html'><aside class="dates">Mar 6</aside></a>
