--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 		<ul id="post-list">
 			
 				<li> 
+					<a href='/posts/safari-bookmarks-import-into-instapaper.html'><aside class="dates">Aug 14</aside></a>
+					<a href='/posts/safari-bookmarks-import-into-instapaper.html'>Import Safari bookmarks into Instapaper <h2>Import Safari bookmarks into Instapaper</h2></a>
+				</li>
+			
+				<li> 
 					<a href='/posts/save-to-mendeley-extension.html'><aside class="dates">Mar 6</aside></a>
 					<a href='/posts/save-to-mendeley-extension.html'>Save to Mendeley <h2>A Safari extension.</h2></a>
 				</li>
